--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,9 +71,15 @@
     <string name="RowMinus" translatable="false">Row-</string>
     <string name="ColPlus" translatable="false">Col+</string>
     <string name="ColMinus" translatable="false">Col-</string>
-    <string name="Add" translatable="false">Add</string>
-    <string name="Subtract" translatable="false">Subtract</string>
-    <string name="Info" translatable="false">Info</string>
+    <string name="AddMatrix" translatable="false">Add</string>
+    <string name="SubtractMatrix" translatable="false">Subtract</string>
+    <string name="MultiplyMatrix" translatable="false">Multiply</string>
+    <string name="PowerMatrix" translatable="false">Power</string>
+    <string name="InverseMatrix" translatable="false">Inverse</string>
+    <string name="InfoMatrix" translatable="false">Info</string>
+    <string name="PowerTo2" translatable="false">Power to 2</string>
+    <string name="PowerTo3" translatable="false">Power to 3</string>
+    <string name="PowerTo4" translatable="false">Power to 4</string>
 
     // Statistics
     <string name="StatisticsOverview" translatable="false">Statistics Overview</string>
