Added functions drawing for complex functions for future update of GUI and extending a limit of input.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,9 @@
     <string name="PowerTo3" translatable="false">Power to 3</string>
     <string name="Undo" translatable="false">Undo</string>
 
+    // Function chart
+    <string name="FunctionChart" translatable="false">Function chart</string>
+
     // Statistics
     <string name="StatisticsOverview" translatable="false">Statistics Overview</string>
     <string name="TotalQuestions" translatable="false">Total questions</string>
